--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,7 +58,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\NewBehaviourScript.cs" />
+     <Compile Include="Assets\ColorChanger.cs" />
+     <Compile Include="Assets\MainController.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/home/rony/Unity/Sample Unity Project/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
