--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,9 @@
   <ItemGroup>
      <Compile Include="Assets\ColorChanger.cs" />
      <Compile Include="Assets\MainController.cs" />
+     <Compile Include="Assets\Movement.cs" />
+     <Compile Include="Assets\MovementRigidBody.cs" />
+     <Compile Include="Assets\PlayerCollision.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/home/rony/Unity/Sample Unity Project/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
